@@ -1,3 +1,9 @@
+1012-01-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc.c,
+	  src/hc08/ralloc.c:
+	  Preparations for enabling better stack handling for all ports.
+
 2012-01-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
